# maintainer-triage-kit

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: tests.yml
examples/: issues.sample.json
src/maintainer_triage/: __init__.py  cli.py  models.py  report.py  rules.py
tests/: test_report.py  test_rules.py
