[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-triage-kit"
version = "0.1.0"
description = "Local-first issue triage reports for open-source maintainers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source Maintainers" }]
keywords = ["github", "maintainers", "triage", "open-source"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Bug Tracking",
]

[project.scripts]
maintainer-triage = "maintainer_triage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
